src/force-app/main/default/objects/Livraison__c/fields/livraisonTransporteur__c.field-meta.xml
<CustomField>
    <fullName>livraisonTransporteur__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>livraisonTransporteur</label>
    <referenceTo>Transporteur__c</referenceTo>
    <relationshipLabel>Livraisons</relationshipLabel>
    <relationshipName>Livraisons</relationshipName>
    <type>Lookup</type>
</CustomField>