src/force-app/main/default/objects/Livraison__c/fields/OrderLivraison__c.field-meta.xml
<CustomField>
    <fullName>OrderLivraison__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>OrderLivraison</label>
    <referenceTo>Order</referenceTo>
    <relationshipLabel>Livraisons</relationshipLabel>
    <relationshipName>Livraisons</relationshipName>
    <type>Lookup</type>
</CustomField>