src/force-app/main/default/objects/Livraison__c/fields/shippingOption__c.field-meta.xml
<CustomField>
    <fullName>shippingOption__c</fullName>
    <label>shippingOption</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>cheapest</fullName>
            </value>
            <value>
                <fullName>fastest</fullName>
            </value>
            <value>
                <fullName>other</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>