src/force-app/main/default/objects/Livraison__c/fields/Status__c.field-meta.xml
<CustomField>
    <fullName>Status__c</fullName>
    <label>Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>livraisons effectuées</fullName>
            </value>
            <value>
                <fullName>en cours</fullName>
            </value>
            <value>
                <fullName>échouées</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>